Updated SDK version for Android, Google Auth and Gradle versions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,15 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -46,7 +55,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     //Google OAUth
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-auth:20.0.1'
 
     //RealmRecyclerViewAdapter
     implementation "io.realm:android-adapters:4.0.0"
